<resources>
    <string name="app_name">Jisho Rough 2</string>
    <string name="search_hint">Search here...</string>
    <string name="account">Account</string>
    <string name="user">User</string>
    <string name="my_lists">My Lists</string>
    <string name="app">App</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
